feat-swagger: swagger schema in separate files
