# src/interfaces/v1/routes/welcomes/welcome.route.go
@@ -7,11 +7,10 @@ import (
 	"net/http"
 )
 
-// WelcomeRoutes registers welcome endpoints
 // @Summary      Welcome point
 // @Description  Welcome entry point to test API run
 // @Tags         Welcome
-// @Success      200  {string}  "Welcome message"
+// @Success      200  {object} schemas.ResponseSchema{data=schemas.WelcomeResponseSchema} "Successful response"
 // @Router       /welcome [get]
 func WelcomeRoutes(mux *http.ServeMux) {
 	mux.HandleFunc("/welcome", middlewares.Apply(
