# src/interfaces/v1/schemas/auths/auth.schema.go
@@ -1,0 +1,11 @@
+package schemas
+
+type AuthBodySchema struct {
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required"`
+}
+
+type AuthResponseSchema struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+}
