# src/interfaces/v1/schemas/response.schema.go
@@ -1,0 +1,7 @@
+package schemas
+
+type ResponseSchema struct {
+	Message string `json:"message"`
+	Data    any    `json:"data"`
+	Error   any    `json:"error"`
+}
