# src/interfaces/v1/schemas/welcomes/welcome.schema.go
@@ -1,0 +1,6 @@
+package schemas
+
+type WelcomeResponseSchema struct {
+	Version string `json:"version"`
+	About   string `json:"about"`
+}
